<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBarLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:titleTextColor="@color/base_colorWhite" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/base_dp_25dp"
            android:layout_marginTop="@dimen/base_dp_45dp"
            android:layout_marginRight="@dimen/base_dp_25dp"
            android:layout_marginBottom="@dimen/base_dp_45dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/base_dp_20dp"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/base_dp_20dp"

            >

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_10dp"
                android:text="@string/user_app_name"
                android:textColor="@color/base_colorPrimaryDark"
                android:textSize="@dimen/base_text_sp_27"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_25dp"
                android:text="@string/user_registered"
                android:textColor="@color/base_text_gray_color"
                android:textSize="@dimen/base_text_sp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app" />

            <TextView
                android:id="@+id/tv_login_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_4dp"
                android:text="注册后体验更多功能"
                android:textColor="@color/base_text_gray_color"
                android:textSize="@dimen/base_text_sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_35dp"
                android:text="@string/user_account"
                android:textColor="@color/base_text_gray_color"
                android:textSize="@dimen/base_text_sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_info" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="@dimen/base_dp_35dp"
                android:inputType="text"
                android:hint="@string/user_input_account"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_account" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_35dp"
                android:text="@string/user_password"
                android:textColor="@color/base_text_gray_color"
                android:textSize="@dimen/base_text_sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_account" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="@dimen/base_dp_35dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/user_input_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <Button
                android:id="@+id/bt_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_dp_30dp"
                android:background="@drawable/user_bg_theme_round_25"
                android:text="@string/user_registered"
                android:textColor="@color/base_colorWhite"
                android:textSize="@dimen/base_text_sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />


            <TextView
                android:id="@+id/tv_goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dp_15dp"
                android:text="已有账号，去登录 >>"
                android:textColor="@color/base_text_gray_color"
                android:textSize="@dimen/base_text_sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/bt_registered"
                app:layout_constraintLeft_toRightOf="@+id/bt_registered"
                app:layout_constraintTop_toTopOf="@+id/bt_registered" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</layout>